--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ h6,
 
 /*right part*/
 .banner_box2 {
-    margin: 208px 0px 293px;
+    margin: 24.44% 0px 32.56%;
     width: 470px;
     background-color: #FFFFFF;
     min-height: 450px;
