--- a/css/reset.css
+++ b/css/reset.css
@@ -1,296 +1,3 @@
-* {
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    margin: 0;
-    padding: 0;
-}
+a,abbr,acronym,address,applet,article,aside,audio,b,blockquote,big,body,center,canvas,caption,cite,code,command,datalist,dd,del,details,dfn,dl,div,dt,em,embed,fieldset,figcaption,figure,font,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,keygen,label,legend,li,meter,nav,object,ol,output,p,pre,progress,q,s,samp,section,small,span,source,strike,strong,sub,sup,table,tbody,tfoot,thead,th,tr,tdvideo,tt,u,ul,var{background:transparent;border:0 none;font-size:100%;margin:0;padding:0;border:0;outline:0;vertical-align:top;}ol, ul {list-style:none;}blockquote, q {quotes:none;}table, table td {padding:0;border:none;border-collapse:collapse;}img {vertical-align:top;}embed {vertical-align:top;}input[type=text], textarea{ outline:none;border-radius:0;}
 
-section[class*="dark"] {
-    color: #FFFFFF;
-}
-
-section[class*="light"] {
-    color: #000000;
-}
-
-/*MENU*/
-.menu {
-    background-color: black;
-    height: 75px;
-}
-
-.menu__logo {
-    position: absolute;
-    width: 183.1px;
-    height: 74.85px;
-    left: 7.61%;
-}
-
-.menu__list {
-    position: absolute;
-    left: 50.2%;
-    list-style: none;
-    width: 62.5%;
-}
-
-.menu__list__item {
-    display: inline-block;
-    margin-left: 5%;
-    margin-top: 25px;
-    /*width: 12.5%;*/
-}
-
-.menu__list__link {
-    color: #FFFFFF;
-    text-decoration: none;
-    font-family: Open Sans;
-    font-size: 14px;
-    font-weight: 600;
-}
-
-/*Main banner*/
-/*left part*/
-.banner-dark {
-    background-image: url(../imagine/mainbanner.jpg);
-    background-color: rgba(3, 3, 3, 0,5);
-    height: 1026px;
-}
-
-.banner__box1 {
-    position: absolute;
-    margin: 208px 670px 185px 170px;
-}
-
-.banner__box2 {
-    position: absolute;
-    margin: 208px 170px 293px 870px;
-}
-
-.banner__header {
-    font-size: 48px;
-    font-weight: 500;
-    margin-top: 72.88px;
-    margin-bottom: 55.12px;
-}
-
-hr[class*="line"] {
-    width: 170px;
-}
-
-.line-light {
-    margin-left: 44.3%;
-    margin-right: 44.3%;
-    border-color: #ec7979;
-}
-
-.banner__text {
-    margin-top: 42px;
-    margin-bottom: 84px;
-    width: 270px;
-}
-
-a[class*="button-small"] {
-    border-style: solid;
-    padding: 19.3px 90px;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.banner__button-small {
-    border-color: #FFFFFF;
-    color: #FFFFFF;
-}
-
-/*right part*/
-.banner__box2 {
-    background-color: #FFFFFF;
-    width: 470px;
-    height: 450px;
-    border: #ec7979 solid;
-    border-radius: 10px;
-    color: #BDBDBD;
-    font-size: 14px;
-}
-
-.banner__box2__header {
-    text-align: center;
-    color: #000000;
-    font-family: Open Sans;
-    font-weight: 700;
-    font-size: 24px;
-    padding: 30px;
-}
-
-.free {
-    color: #ec7979;
-    font-family: Open Sans;
-    font-weight: 700;
-    font-size: 24px;
-}
-
-.banner__form { 
-    height: 255px;
-    width: 370px;
-    margin-top: 45px;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.banner__form__item {
-    height: 8px;
-    width: 370px;
-    margin: 44px;
-}
-
-.banner__form__name {
-    width: 370px;
-}
-
-.banner__form__input {
-    width: 370px;
-    border: none;
-    border-bottom: #BDBDBD;
-}
-
-.banner__form__button {
-    width: 470px;
-    height: 60px;
-    /*padding: 20px 198px 20px 198px;*/
-    margin-bottom: 393px;
-    color: white;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    font-family: Open Sans;
-    font-size: 15px;
-    font-weight: 600;
-    background-color: #ec7979;
-    border: none;
-}
-
-/*media*/
-.media-light {
-    background-color: #F8EFEF;
-    height: 140px;
-}
-
-.media__box1 {
-    width: 470px;
-    margin-left: 170px;
-    float: left;
-}
-
-.media__header {
-    font-family: Open Sans;
-    font-weight: 700;
-    font-size: 24px;
-    margin-top: 2px;
-}
-
-.media__text {
-    margin-bottom: 18px;
-    margin-top: 20px;
-    width: 470px;
-    padding-top: 20px;
-}
-
-.media__list {
-    list-style: none;
-    margin-left: 689px;
-    padding-top: 40.8px;
-    padding-bottom: 40.8px;
-    width: 657.21px;
-}
-
-.media__list__item {
-    display: inline;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-/*Tabs*/
-#tabs {
-    background-color: #FFFFFF;
-}
-
-.tabs__list {
-    list-style: none;
-    text-decoration: none;
-    margin-left: 170px;
-    font-family: Open Sans;
-    font-style: normal;
-    font-size: 14px;
-    margin-top: 60px;
-}
-
-.tabs__list__item {
-    display: inline;
-    padding-left: 81.5px;
-    padding-right: 81.5px;
-}
-
-div[class*="tabs__main-box"] {
-    width: 1170px;
-    height: 701px;
-    margin-left: 170px;
-    margin-top: 80px;
-    border: #BDBDBD;
-}
-
-.tabs__box{
-    height: 501px;
-    width: 570px;
-    float: left;
-}
-
-.tabs__img {
-    float: right;
-    aspect-ratio: 470/500;
-}
-
-.tabs__box__header {
-    font-family: Open Sans;
-    font-size: 30px;
-    font-weight: 700;
-    height: 124px;
-    width: 570px;
-}
-
-p[class*="tabs__box__text"] {
-    margin-bottom: 27px;
-}
-
-/*кнопка без отступа*/
-.tabs__button-small {
-    background-color: #ec7979;
-    color: #FFFFFF;
-    font-family: Open Sans;
-    font-weight: 600;
-}
-
-#about {
-    height: 665px;
-    width: 1170px;
-    margin: 20px 170px 20px 170px;
-}
-
-.about__header {
-    font-family: Raleway;
-    font-size: 36px;
-    text-align: center;
-    height: 150px;
-}
-
-.about__text {
-    padding-top: 40px;
-    height: 21px;
-    text-align: center;
-    height: 100px;
-}
-
-.about__list__item {
-    display: inline;
-    width: 370px;
-    float: right;
-}
+article,aside,audio,canvas,command,datalist,details,embed,figcaption,figure,footer,header,hgroup,keygen,meter,nav,output,progress,section,source,video, main{display:block}mark,rp,rt,ruby,summary,time{display:inline}
