--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ h2,
     font-family: Raleway;
     font-size: 36px;
     font-weight: 400;
+    line-height: 56px;
 }
 
 h3,
@@ -35,6 +36,7 @@ h3,
     font-family: Open Sans;
     font-size: 30px;
     font-weight: 700;
+    line-height: 42px;
 }
 
 h4,
@@ -42,6 +44,7 @@ h4,
     font-family: Open Sans;
     font-size: 24px;
     font-weight: 700;
+    line-height: 32px;
 }
 
 h5,
@@ -49,6 +52,7 @@ h5,
     font-family: Raleway;
     font-size: 18px;
     font-weight: 400;
+    line-height: 21px;
 }
 
 h6,
@@ -56,12 +60,19 @@ h6,
     font-family: Open Sans;
     font-size: 13px;
     font-weight: 700;
+    line-height: 18px;
+}
+
+.dark {
+    color: white;
+    background-color: black;
 }
 
 /*bittons*/
 .button {
     font-family: Open Sans;
     font-weight: 600;
+    line-height: 25px;
     color: white;
     text-align: center;
     padding: 20px 0px;
@@ -112,29 +123,26 @@ h6,
 /*lines*/
 .line {
     width: 170px;
-    height: 1px;
     border: none;
+    border-bottom: 1px solid #EC7979;
     margin: 0px auto;
 }
 
 .light-line {
-    background-color: white;
-}
-
-.color-line {
-    background-color: #EC7979;
+    border-bottom: 1px solid #ffffff;
 }
 
 /*Headers*/
-.block_header {
+.block__header {
     display: block;
     padding-top: 107px;
     padding-bottom: 57px;
     text-align: center;
     text-transform: uppercase;
+    /* margin-top: 50px; */
 }
 
-.block_text {
+.block__text {
     display: block;
     text-align: center;
     margin-top: 40px;
@@ -142,10 +150,12 @@ h6,
 
 /*MENU*/
 .header {
+    position: fixed;
+    width: 100vw;
     background-color: rgba(0, 0, 0);
 }
 
-.menu{
+.header-nav {
     display: flex;
     justify-content: space-between;
 }
@@ -155,13 +165,14 @@ h6,
     width: 183px;
 }
 
-.menu__list {
+.menu {
     display: flex;
-    /* justify-content: space-evenly; */
 }
 
 .menu__item {
     display: flex;
+    align-items: center;
+
 }
 
 .menu__link {
@@ -169,9 +180,11 @@ h6,
     text-decoration: none;
     font-family: Open Sans;
     font-weight: 600;
+    line-height: 19px;
     font-size:  14px;
     color: white;
     cursor: pointer;
+    padding: 28px 30px;
 }
 
 .menu__link:hover {
@@ -183,114 +196,102 @@ h6,
 }
 
 /*MAIN BANNER*/
-.dark {
-    color: white;
-    background-color: black;
-}
-
 .main-banner {
     background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../image/mainbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    /*добавить фон сверху*/
+    background-position: center;
 }
 
-/*left part*/
-.banner_box {
+.banner__box {
     display: flex;
+    padding: 283px 0px 185px 0px;
 }
 
-.banner_box1 {
-    padding: 208px 0 183px;
-    max-width: 670px;
-    max-height: fit-content;
-}
-
-.banner_logo {
+.banner__logo {
     width: 270px;
     margin-bottom: 73px;
+    margin-top: -20px;
 }
 
-.banner_logo:last-child {
+.banner__logo:last-child {
     margin-bottom: 0;
 }
 
-.banner-title {
+.banner__title {
     margin-bottom: 55px;
 }
 
-.banner-title:last-child {
+.banner__title:last-child {
     margin-bottom: 0px;
 }
 
-.banner_line {
+.banner__line {
     margin-bottom: 42px;
     margin-left: 0px;
 }
 
-.banner_line:last-child {
+.banner__line:last-child {
     margin-bottom: 0px;
 }
 
-.banner_text {
+.banner__text {
     max-width: 270px;
     margin-bottom: 42px;
+    line-height: 21px;
 }
 
-.banner_text:last-child {
+.banner__text:last-child {
     margin-bottom: 0px;
 }
 
-/*right part*/
-.banner_box2 {
-    margin: 24.44% 0px 32.56%;
+
+/* BANER_FORM */
+.banner__form-box {
+    flex-shrink: 0;
     width: 470px;
+    height: 450px;
     background-color: #FFFFFF;
-    min-height: 450px;
     border-radius: 10px;
 }
 
-.banner_box2_header {
+.form-box__header {
     display: block;
     color: #333333;
     font-family: Open Sans;
     font-weight:  700;
     font-size: 24px;
+    line-height: 33px;
     text-align: center;
     margin: 57px auto;
-    min-height: 24px;
 }
 
 .free {
     color: #EC7979;
 }
 
-.banner_form {
+.banner__form {
     display: block;
     width: 470px;
 }
 
-.banner_form_item {
-    /*min-height: 50px;*/
+.banner__form-item {
     padding: 0px 50px;
     margin-bottom: 33px;
 }
 
-.banner_form_item:first-child {
-    margin-top: 45px;
-}
-
-.banner_form_name {
+.banner__form-name {
     min-height: 19px;
     font-family: Open Sans;
     font-size: 14px;
+    line-height: 19px;
     color: #BDBDBD;
     width: 370px;
     display: block;
 }
 
-.banner_form_input {
+.banner__form-input {
     border-top: none;
     border-left: none;
     border-right: none;
@@ -298,7 +299,7 @@ h6,
     width: 370px;
 }
 
-.form_button {
+.form__button {
     width: 100%;
     min-height: 15px;
     background-color: #EC7979;
@@ -311,14 +312,15 @@ h6,
     margin-bottom: 0px;
 }
 
-.form_button:hover {
+.form__button:hover {
     background-color: #AB4949;
 }
 
-.form_button:active {
+.form__button:active {
     background-color: #EC7979;
     box-shadow: inset 0px 0px 10px #AB4949;
 }
+
 
 /*MEDIA*/
 .media {
@@ -326,84 +328,80 @@ h6,
     min-height: 140px;
 }
 
-.media_box {
+.media__box {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
 }
 
-.media_box1 {
-    width: 470px;
+.media__box1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.media_header {
+.media__header {
     display: block;
-    font-family: Open Sans;
-    font-weight: 700;
-    font-size: 24px;
-    /*padding: 18px auto; -- почему не работает?*/
     padding-top: 18px;
-    padding-bottom: 18px;
-    margin-bottom: 18px;
 }
 
-.media_header:last-child {
-    margin:auto;
+.media__header:last-child {
+    margin: auto;
 }
 
-.media_text {
+.media__text {
     display: block;
-    font-size: 18px;
-    margin-bottom: 18px;
+    margin-bottom: 18px; 
 }
 
-.media_text:last-child {
-    margin:auto;
-}
-
-.media_list {
+.media__list {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    width: 680px;
+    flex-shrink: 0;
+    align-items: center;
 }
 
-.media_list_item {
+.media__item {
     margin: 35px 20px;
 }
 
 /*TABS*/
 .tabs {
-    margin: 100px auto;
+    margin-top: 100px;
 }
 
-.tabs_list {
+.tabs__list {
     list-style: none;
     display: flex;
     justify-content: flex-start;
 }
 
-.tabs_list_item {
+/*?????????????????????????????????????????????????*/
+.tabs__item {
     text-transform: uppercase;
-    list-style: none;
-    width: 194px;
+    background: #FFFFFF cover;
+    padding: 12px 99px;
     text-align: center;
-    padding-top: 12px;
-    padding-bottom: 12px;
     font-family: Open Sans;
     font-size: 14px;
-    border-bottom: #BDBDBD solid 1px;
+    line-height: 19px;
     cursor: pointer;
+    margin-bottom: -1px;
+    border-bottom: #BDBDBD solid 1px;
 }
 
-.tabs_list_item:active,
-.tabs_list_item:hover {
+.tabs__item:active {
     border: #BDBDBD solid 1px;
-    border-bottom: none;
+    border-bottom: #ffffff solid 1px;
+    border-radius: 5px 5px 0px 0px;
+    margin: -1px;
 }
 
-.tabs_main-box {
+.tabs__box {
     display: flex;
+    border: #BDBDBD solid 1px;
+    justify-content: space-between;
 }
 
 .tab2 {
@@ -414,75 +412,73 @@ h6,
     display: none;
 }
 
-.tabs_text-box {
-    width: 570px;
+.tabs__text-box {
     margin-left: 100px;
+    margin-right: 30px;
 }
 
-.tabs_box_header {
-    padding-top: 24px;
-    padding-bottom: 24px;
+.tabs__header {
+    padding-top: 42px;
+    padding-bottom: 42px;
     margin-bottom: 27px;
 }
 
-/*как правильно расположить строки? span?*/
-.tabs_box_text {
+.tabs__description {
     margin-bottom: 20px;
 }
 
-.tabs_box_text:last-child {
+.tabs__description:last-child {
     margin-bottom: 0px;
 }
 
+.tabs__img {
+    aspect-ratio: 470/500;
+}
 
 /*ABOUT*/
-.about_text {
+.about__text {
     margin-bottom: 110px;
 }
 
-.about_list {
+.about__list {
     display: flex;
-    list-style: none;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0px -15px;
 }
 
-.about_list_item {
-    width: 370px;
+.about__item {
+    width: 33.3333%;
+    padding: 0px 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.about_list_icon {
-    width: 170px;
-    height: 170px;
+.about__icon {
+    width: 43.59%;
     margin-bottom: 39px;
 }
 
-.about_list_icon:last-child {
+.about__icon:last-child {
     margin-bottom: 58px;
 }
 
-.about_list_title {
+.about__title {
     display: block;
     padding-top: 38px;
     padding-bottom: 38px;
-    width: 370px;
     margin: 0px 5px 8px;
-    text-align: center;
 }
 
-.about_list_title:last-child {
+.about__title:last-child {
     margin-bottom: 58px;
 }
 
-.about_list_text {
+.about__description {
     display: block;
-    width: 370px;
     text-align: center;
-    margin: 0px 5px 58px;
+    margin-bottom: 58px;
 }
 
 /*PRICE*/
@@ -490,53 +486,53 @@ h6,
     background-color: #F5F5F5;
 }
 
-.price_text {
+.price__text {
     margin-bottom: 59px;
 }
 
-.prise_cards {
+.prise__cards {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    margin: 0px -15px;
 }
 
-.price_card {
+.price__card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 370px;
+    width: 33.3333%;
     margin: 0px 15px;
     color: #FFFFFF;
     margin-bottom: 20px;
+    flex-shrink: 0;
 }
 
-.price_card2 {
-    filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
-    align-self: flex-start;
+.price__card2 {
+    box-shadow: 0px 4px 10px rgba(51, 51, 51, 0.2);
     margin-bottom: 30px;
 }
 
-.price_card_name {
+.price__name {
     display: block;
     background-color: #333333;
     padding: 18px;
-    width: 370px;
+    width: 100%;
     text-align: center;
     border: solid #F5F5F5 2px;
 }
 
-.price_card_cost {
+.price__cost {
     display: block;
     background-color: #333333;
     padding: 32px;
-    width: 370px;
     text-align: center;
     font-size: 36px;
     font-weight: 700;
     border: solid #F5F5F5 2px;
 }
 
-.price_card_description {
+.price__description {
     display: block;
     color: rgba(255, 255, 255, 0,5);
     background-color: #333333;
@@ -546,7 +542,7 @@ h6,
     border: solid #F5F5F5 2px;
 }
 
-.price_card_list_item {
+.price__item {
     display: block;
     color: #86878B;
     background-color: #FFFFFF;
@@ -557,22 +553,27 @@ h6,
 }
 
 /*REVIEWS*/
-.reviews_text {
+.reviews__text {
     margin-bottom: 83px;
 }
 
-.reviews_list {
+.reviews__list {
     display: flex;
     list-style: none;
     justify-content: space-between;
+    margin: 0px -15px;
 }
 
-.reviews_list_item {
-    width: 370px;
+.reviews__item {
+    width: 33.3333%;
     margin: 0px 15px;
 }
 
-.reviews_quote {
+.reviews__quote {
+    position: relative;
+}
+
+.reviews__quote-descr {
     background-color: #E2E2E2;
     color: #86878B;
     text-align: center;
@@ -582,7 +583,7 @@ h6,
     border-radius: 10px;
 }
 
-.reviews_quote:last-child {
+.reviews__quote-descr:last-child {
     margin-bottom: 46px;
 }
 
@@ -596,29 +597,30 @@ h6,
     margin-bottom: 46px;
 }
 
-.reviewes_manager {
+.reviewes__manager {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 64px;
 }
 
-.reviews_manager_description {
-    width: 240px;
+.reviews__manager-description {
+    /* width: 240px; */
     margin-left: 30px;
 }
 
-.reviews_img {
+.reviews__manager-img {
     flex-shrink: 0;
-    width: 90px;
+    width: 17.95%;
+    aspect-ratio: 70/70;
 }
 
-.reviews_manager_name {
+.reviews__manager-name {
     padding-top: 15px;
     padding-bottom: 15px;
     margin-bottom: 15px;
 }
 
-.reviews_manager_name:last-child {
+.reviews__manager-name:last-child {
     margin-bottom: 0px;
 }
 
