--- a/css/responsiv.css
+++ b/css/responsiv.css
@@ -1,3 +1,17 @@
 @media (max-width: 1119px){
-    
+    .container {
+        padding: 0px 15px;
+    }
+}
+
+@media (max-width: 767px) {
+    .container {
+        padding: 5px;
+    }
+}
+
+@media (max-width: 3px) {
+    .container {
+        padding: 5px;
+    }
 }
